--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,85 @@
-:root{
-    --colo-prymary: #ff0000;
+@import url(variables.css);
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background: var(--color-primary);
+}
+.section__img{
+    width: 100%;
+    height: 100vh;
+    /* background: red; */
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: space-between;
+}
+.section__img img{
+   
+}
+.section__img img:first-child{
+    /* background: violet; */
+    align-self: flex-start;
+
+}
+.section__img img:last-child{
+    height: 75%;
+    /* background: blue; */
+    margin-right: 100px;
+    align-self: flex-start;
+
+}
+.section__container{
+    display: flex;
+    justify-content: space-between;
+}
+.article__jump {
+    background: rebeccapurple;
+    display: inline-block;
+    width: 100%;
+
+}
+.article__jump h1,
+.article__jump p,
+.article__jump a{
+    color: var(--color-font-primary);
+}
+.article__jump h1{
+}
+.article__jump p{
+}
+.article__jump a{
+}
+.article__counter {
+    background: olivedrab;
+    display: inline-block;
+    width: 100%;
+
+}
+.article__item {
+}
+.article__item span,
+.article__item small{
+    color: var(--color-font-primary);
+}
+.article__item span{
+}
+.article__item small{
+}
+.section__card {
+}
+.card__item {
+}
+.card__item img,
+.card__item h5,
+.card__item p{
+    color: var(--color-font-primary);
+}
+.card__item img{
+}
+.card__item h5{
+}
+.card__item p{
 }
