--- a/css/variables.css
+++ b/css/variables.css
@@ -1,85 +1,31 @@
-@import url(variables.css);
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    background: var(--color-primary);
-}
-.section__img{
-    width: 100%;
-    height: 100vh;
-    /* background: red; */
-    position: absolute;
-    z-index: -1;
-    display: flex;
-    justify-content: space-between;
-}
-.section__img img{
-   
-}
-.section__img img:first-child{
-    /* background: violet; */
-    align-self: flex-start;
+:root{
+    --color-1: #292526;
+    --color-2: #1B2028;
+    --color-3: #A4AAAD;
+    --color-4: #111111;
+    --color-5: #FFFFFF;
+    --space-layout-padding-lr: 0px 15px;
+    --space-layout-padding-t: 5px; 
+    --layout-imagen-width:100%;
+    --layout-imagen-height:350px;
+
+    --layout-imagen-width-detail:100%;
+    --layout-imagen-height-detail:385px;
 
 }
-.section__img img:last-child{
-    height: 75%;
-    /* background: blue; */
-    margin-right: 100px;
-    align-self: flex-start;
-
+@font-face {
+    font-family: "EncodeSans-Regular";
+    src: url("../storage/font/encode-sans/EncodeSans-Regular.ttf");
 }
-.section__container{
-    display: flex;
-    justify-content: space-between;
+@font-face {
+    font-family: "EncodeSans-Medium";
+    src: url("../storage/font/encode-sans/EncodeSans-Medium.ttf");
 }
-.article__jump {
-    background: rebeccapurple;
-    display: inline-block;
-    width: 100%;
-
+@font-face {
+    font-family: "EncodeSans-SemiBold";
+    src: url("../storage/font/encode-sans/EncodeSans-SemiBold.ttf");
 }
-.article__jump h1,
-.article__jump p,
-.article__jump a{
-    color: var(--color-font-primary);
-}
-.article__jump h1{
-}
-.article__jump p{
-}
-.article__jump a{
-}
-.article__counter {
-    background: olivedrab;
-    display: inline-block;
-    width: 100%;
-
-}
-.article__item {
-}
-.article__item span,
-.article__item small{
-    color: var(--color-font-primary);
-}
-.article__item span{
-}
-.article__item small{
-}
-.section__card {
-}
-.card__item {
-}
-.card__item img,
-.card__item h5,
-.card__item p{
-    color: var(--color-font-primary);
-}
-.card__item img{
-}
-.card__item h5{
-}
-.card__item p{
+@font-face {
+    font-family: "EncodeSans-Bold";
+    src: url("../storage/font/encode-sans/EncodeSans-Bold.ttf");
 }
